# image-processor

./: .gitignore  .pdm-python  KMeans.py  README.md  color_converter.py  main.py  models.py  palete_io.py  pyproject.toml
palletes/: catpuccin_mocha.json  gruvbox_dark.json
src/backend/: __main__.py  color_converter.py  image_pipeline.py  models.py  ordered_dithering.py  palete_io.py  palette_quantizer.py
src/backend/models/: image_pipeline.py
src/backend/processors/: ordered_dithering.py  palette_quantizer.py
src/cli/: cli.py  config.py
src/gistqd/: cli.py
