[project]
name = "gistqd"
version = "0.0.5"
description = "A GTK 4.0 application to quantize any given image based on palette (like catpuccin, nord, etc) or automatically and set it as wallpaper"
authors = [
    {name = "Anatoliy Dudar", email = "gigsollt@gmail.com"},
]
dependencies = ["numpy>=2.3.1", "opencv-python>=4.11.0.86", "pillow>=11.3.0", "pygobject-stubs>=2.13.0",  "click>=8.2.1", "platformdirs>=4.3.8"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
gistqd = "gistqd.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/"]
